# itick-mcp-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.multistage  README.md  app.py  client.py  config.py  docker-compose.yml  install.sh  pyproject.toml  server.py  setup_config.py  texts.py  tools_register.py
docs/: opencode.md
examples/: sse_client_example.py
scripts/: run_sse.sh
src/itick_mcp_server/: __init__.py  __main__.py  client.py  server.py  tools_register.py
