[project]
name = "itick-mcp-server"
version = "0.1.0"
description = "MCP server for iTick stock kline API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
itick-mcp = "itick_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/itick_mcp_server"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
